<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">HelpTranslation</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="login_username_hint">请输入用户名&#8230;</string>
    <string name="login_password_hint">请输入密码&#8230;</string>
    <string name="login">登录</string>
    <string name="register_txt1">还没有账号？</string>
    <string name="register_txt2">立即注册 ></string>
    <string name="register_tv_name">用户名：</string>
    <string name="register_et_name">请输入用户名</string>
    <string name="register_tv_password">密码：</string>
    <string name="register_et_password">请输入密码</string>
    <string name="register_tv_password1">确认密码：</string>
    <string name="register_et_password1">再次输入密码</string>
    <string name="register_bt">确认</string>
    <string name="task">任务</string>
    <string name="translate">翻译</string>
    <string name="slideMenu">侧边栏</string>
    <string name="result">结果</string>

</resources>